--- a/sytle.css
+++ b/sytle.css
@@ -97,6 +97,7 @@ menu[role="tablist"] button[aria-selected="true"] {
   border-bottom: 1px solid transparent;
   border-top: 1px solid #e68b2c;
   box-shadow: inset 0 2px #ffc73c;
+  padding: 3px;
 }
 
 .article {
@@ -304,4 +305,5 @@ menu[role="tablist"] button[aria-selected="true"] {
 #line {
   border: 1px solid #919b9c;
   padding-bottom: 2px;
+  padding-left: 5px;
 }
